examples/wgsl/tests/data/incomplete_let.wgsl
fn foo() {
  let a
  return b;
  return c;
}

fn bar() {
  let x
}
